# flight-sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Claude.md  LICENSE  README.md
.github/workflows/: ci.yml
src/: enemies.rs  game_state.rs  main.rs  models.rs  powerups.rs  targets.rs  tests.rs  ui.rs
